--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,7 +1,9 @@
-org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -Xlint:-options
 org.gradle.workers.max=2
+org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
 android.useAndroidX=true
 android.enableJetifier=true
 kotlin.daemon.jvmargs=-Xmx1024m
 kotlin_version=1.8.20
 android.overridePathCheck=true
+android.gradle.r8.maxWorkers=2
