--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: alertme
-description: "Представляем Sentinel – ваш современный страж личной безопасности"
+description: "Представляем AlertMe – ваш современный страж личной безопасности"
 publish_to: "none"
 version: 1.0.0
 
@@ -14,17 +14,39 @@ dependencies:
   google_fonts: ^6.1.0
   provider: ^6.1.2
   shared_preferences: ^2.0.0
-  geolocator: 13.0.4
   permission_handler: ^12.0.0
-  url_launcher: ^6.0.0  # Для SMS, звонков, карт
-  intl: 0.20.2
+  url_launcher: ^6.0.0
+  intl: ^0.20.0
   smooth_page_indicator: ^1.0.0
+  path_provider: ^2.0.0
+  flutter_sound: ^9.3.0
+  logger: ^2.6.2
+  geolocator: ^14.0.2
+  # JWT и API
+  jwt_decoder: ^2.0.1
+  # UI
+  pin_code_fields: ^8.0.0
+  flutter_spinkit: ^5.2.0
+  cached_network_image: ^3.3.0
+  # State Management улучшенный
+  riverpod: ^2.4.0
+  flutter_riverpod: ^2.4.0
+  # Network и сериализация
+  dio: ^5.3.0
+  freezed_annotation: ^2.4.1
+  json_serializable: ^6.7.1
+  # Утилиты
+  get_it: ^7.6.0
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
+  build_runner: ^2.4.6
+  freezed: ^2.4.5
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
@@ -32,5 +54,5 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: assets/icons/dreamflow_icon.jpg
+  image_path: assets/icons/alertme_icon.png
   remove_alpha_ios: true
